Alembic sequence Crash #51820

Closed
opened 2017-06-15 18:41:56 +02:00 by Thomas Volkmann · 10 comments

System Information
Fedora 24 x64, NVIDIA Qadro 4000k

Blender Version
Broken: 2.79 testbuild1 and git a96030b
Worked: 2.78c

Crash when loading an alembic sequence and move the timeline.

Exact steps for others to reproduce the error
Load this .abc-sequence: 2frame_Alembic_Sequence
The frames are 1023 and 1024.
Crash message:

terminate called after throwing an instance of 'Alembic::Util::v10::Exception'
  what():  IPolyMeshSchema::get()
ERROR: EXCEPTION:
IArrayProperty::get()
ERROR: EXCEPTION:
std::bad_alloc
[1]    21514 abort (core dumped)  ./blender

Btw. the geometry inside the abc archive has vertexColors, UVs and velocity. Vertex colors are working inside Blender already, but you can use these files for testing if you are going to implement UVs and motion blur.

**System Information** Fedora 24 x64, NVIDIA Qadro 4000k **Blender Version** Broken: 2.79 testbuild1 and git a96030b Worked: 2.78c Crash when loading an alembic sequence and move the timeline. **Exact steps for others to reproduce the error** Load this .abc-sequence: [2frame_Alembic_Sequence ](https://www.dropbox.com/s/ihrgcyekiq1fw82/abc_crash_seq.7z?dl=0) The frames are 1023 and 1024. Crash message: ``` terminate called after throwing an instance of 'Alembic::Util::v10::Exception' what(): IPolyMeshSchema::get() ERROR: EXCEPTION: IArrayProperty::get() ERROR: EXCEPTION: std::bad_alloc [1] 21514 abort (core dumped) ./blender ``` Btw. the geometry inside the abc archive has vertexColors, UVs and velocity. Vertex colors are working inside Blender already, but you can use these files for testing if you are going to implement UVs and motion blur.

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @knekke

Added subscriber: @knekke

Added subscribers: @dr.sybren, @mont29

Added subscribers: @dr.sybren, @mont29
Sybren A. Stüvel was assigned by Bastien Montagne 2017-06-16 16:24:31 +02:00

Please always attach files here, other places are not guaranteed to keep file around… abc_crash_seq.7z

@dr.sybren can confirm crash, guess that one is for you. :)

Please always attach files here, other places are not guaranteed to keep file around… [abc_crash_seq.7z](https://archive.blender.org/developer/F632821/abc_crash_seq.7z) @dr.sybren can confirm crash, guess that one is for you. :)

This issue was referenced by 0900914d96

This issue was referenced by 0900914d96441a05a8b6411eff3b85e3eae578f8

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Changed status from 'Resolved' to: 'Open'

Changed status from 'Resolved' to: 'Open'

I have problems again with alembic sequences in 2.8. The sample files further up are crashing too...

I have problems again with alembic sequences in 2.8. The sample files further up are crashing too...

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

@knekke please do not re-open old reports, even if issue seems similar, it is quiet likely to be something different, so new report is always the way to go (you can easily link new one back to an older one if needed, of course). Plus, it makes things simpler to track down (a report that is fixed, then mark as not fixed, then fixed again… becomes confusing).

@knekke please do not re-open old reports, even if issue seems similar, it is quiet likely to be something different, so new report is *always* the way to go (you can easily link new one back to an older one if needed, of course). Plus, it makes things simpler to track down (a report that is fixed, then mark as not fixed, then fixed again… becomes confusing).
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#51820
No description provided.