Alembic: fix T51820 for sequence files not loading properly.